--- a/bem/css/style.css
+++ b/bem/css/style.css
@@ -4,23 +4,36 @@
 * {
   padding: 0;
   margin: 0;
-  border: 0; }
+  border: 0;
+}
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
-:focus, :active {
-  outline: none; }
+:focus,
+:active {
+  outline: none;
+}
 
-a:focus, a:active {
-  outline: none; }
+a:focus,
+a:active {
+  outline: none;
+}
 
-nav, footer, header, aside {
-  display: block; }
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   font-size: 100%;
@@ -28,50 +41,72 @@ html, body {
   font-size: 14px;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+}
 
-input, button, textarea {
-  font-family: inherit; }
+input,
+button,
+textarea {
+  font-family: inherit;
+}
 
 input::-ms-clear {
-  display: none; }
+  display: none;
+}
 
 button {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 button::-moz-focus-inner {
   padding: 0;
-  border: 0; }
+  border: 0;
+}
 
-a, a:visited {
-  text-decoration: none; }
+a,
+a:visited {
+  text-decoration: none;
+}
 
 a:hover {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ul li {
-  list-style: none; }
+  list-style: none;
+}
 
 img {
-  vertical-align: top; }
+  vertical-align: top;
+}
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: inherit;
-  font-weight: inherit; }
+  font-weight: inherit;
+}
 
 /*--------------------*/
 body {
-  font-family: Lato; }
+  font-family: Lato;
+}
 
 .about__body {
   max-width: 823px;
-  margin: 0px auto; }
+  margin: 0px auto;
+}
 
 .about__header {
-  margin: 0px 0px 65px 0px; }
+  margin: 0px 0px 65px 0px;
+}
 
 .about__title {
-  margin: 0px 0px 30px 0px; }
+  margin: 0px 0px 30px 0px;
+}
 
 .about__text {
   max-width: 688px;
@@ -80,20 +115,23 @@ body {
   font-weight: 300;
   text-align: center;
   line-height: 25.89px;
-  margin: 0px auto; }
+  margin: 0px auto;
+}
 
 .about__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-size: 0;
-  margin: 0px -15px; }
+  margin: 0px -15px;
+}
 
 .about__column {
   padding: 0px 15px;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 33.333%;
-  flex: 0 0 33.333%; }
+  flex: 0 0 33.333%;
+}
 
 .title {
   font-size: 34px;
@@ -102,16 +140,18 @@ body {
   letter-spacing: 8.95px;
   position: relative;
   text-align: center;
-  padding: 0px 0px 30px 0px; }
-  .title:after {
-    content: '';
-    position: absolute;
-    width: 50px;
-    bottom: 0;
-    height: 1px;
-    left: 50%;
-    background-color: #000;
-    margin: 0px 0px 0px -25px; }
+  padding: 0px 0px 30px 0px;
+}
+.title:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  bottom: 0;
+  height: 1px;
+  left: 50%;
+  background-color: #000;
+  margin: 0px 0px 0px -25px;
+}
 
 .item-about__icon {
   margin: 0px auto 40px auto;
@@ -127,7 +167,8 @@ body {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .item-about__title {
   text-align: center;
@@ -135,11 +176,13 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   letter-spacing: 3.52px;
-  margin: 0px 0px 35px 0px; }
+  margin: 0px 0px 35px 0px;
+}
 
 .item-about__text {
   text-align: center;
   color: #868585;
   line-height: 26px;
   font-weight: 300;
-  font-size: 14px; }
+  font-size: 14px;
+}
