--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,7 +4,6 @@
 
 body {
   font-family: Lato;
-  padding: 2px;
 }
 
 .about {
@@ -82,4 +81,39 @@ body {
     font-weight: 300;
     font-size: 14px;
   }
+}
+footer {
+  background-color: #3c3c3c;
+}
+.footer {
+  width: 400px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  &__logo {
+    width: 122px;
+    margin: 0 auto;
+  }
+  &__links {
+    width: 260px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+  }
+}
+.links__item {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #a4a4a4;
+}
+.footer__copyright {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #6c6c6c;
 }
