--- a/css/style.css
+++ b/css/style.css
@@ -171,13 +171,22 @@ body {
   font-size: 14px;
 }
 
-footer {
-  background-color: #3c3c3c;
-}
-
 .footer {
-  width: 400px;
-  margin: 0 auto;
+  background-color: #3c3c3c;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -189,7 +198,6 @@ footer {
 
 .footer__links {
   width: 260px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -197,6 +205,14 @@ footer {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 40px;
+  padding-bottom: 30px;
+}
+
+.footer__copyright {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #6c6c6c;
 }
 
 .links__item {
@@ -206,16 +222,16 @@ footer {
   color: #a4a4a4;
 }
 
-.footer__copyright {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-top: 30px;
-  font-size: 14px;
-  line-height: 1.2;
-  font-weight: 400;
-  color: #6c6c6c;
+.header {
+  background: url(/img/header/bg_header.png), -webkit-gradient(linear, left top, right top, from(#575583), to(#4f8b9f));
+  background: url(/img/header/bg_header.png), linear-gradient(to right, #575583, #4f8b9f);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 1080px;
+  padding-top: 160px;
+}
+
+.header__logo {
+  width: 195px;
+  margin: 0 auto;
 }
